--- a/client/App.module.scss
+++ b/client/App.module.scss
@@ -2,3 +2,10 @@
   background-color: var(--background-color);
   color: var(--text-color);
 }
+
+.backgroundSquares {
+  color: white;
+  position: fixed;
+  z-index: 0;
+  opacity: 0.5;
+}
