--- a/client/Pages/AskMintlify/index.module.scss
+++ b/client/Pages/AskMintlify/index.module.scss
@@ -1,10 +1,10 @@
 .askMintlify {
   display: flex;
-  align-items: center;
+  align-items: flex-start;
   justify-content: center;
-  padding: 36px 24px;
+  padding: 82px 24px;
   box-sizing: border-box;
-  height: 100vh;
+  height: 80vh;
 }
 
 .textboxContainer {
