--- a/client/components/Chat/TextBox.module.scss
+++ b/client/components/Chat/TextBox.module.scss
@@ -69,9 +69,21 @@
 
   &.loadingResponse {
     animation-name: loadingResponse;
-    animation-duration: 0.75s;
+    animation-duration: 1s;
     animation-iteration-count: infinite;
     animation-fill-mode: forwards;
+  }
+}
+
+@keyframes responseLoading {
+  0% {
+    box-shadow: 0px 0px 36px 0px #77dbf226;
+  }
+  50% {
+    box-shadow: 0px 0px 36px 0px #77dbf250;
+  }
+  100% {
+    box-shadow: 0px 0px 36px 0px #77dbf226;
   }
 }
 
@@ -85,6 +97,13 @@
   gap: 14px;
   position: relative;
 
+  &.isLoadingResponse {
+    animation-name: responseLoading;
+    animation-duration: 1s;
+    animation-iteration-count: infinite;
+    animation-timing-function: ease-in-out;
+  }
+
   .ragContext {
     position: absolute;
     top: calc(100% + 24px);
@@ -95,6 +114,16 @@
 
     &:hover {
       opacity: 0.85;
+    }
+
+    a {
+      color: #fff;
+      text-decoration: none;
+      font-weight: 500;
+
+      &:hover {
+        text-decoration: underline;
+      }
     }
   }
 
@@ -129,5 +158,35 @@
 
   .spacer {
     height: 18px;
+  }
+
+  .responseOptions {
+    position: absolute;
+    top: 8px;
+    right: 14px;
+    display: flex;
+    align-items: center;
+    gap: 8px;
+
+    button {
+      color: white;
+      border: none;
+      background-color: transparent;
+      font-size: 16px;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      cursor: pointer;
+      transition: all 0.2s ease-in-out;
+      opacity: 0.65;
+
+      &:hover {
+        opacity: 1;
+      }
+
+      &:active {
+        transform: scale(0.9);
+      }
+    }
   }
 }
