--- a/client/App.module.scss
+++ b/client/App.module.scss
@@ -3,9 +3,17 @@
   color: var(--text-color);
 }
 
-.backgroundSquares {
-  color: white;
-  position: fixed;
-  z-index: 0;
-  opacity: 0.5;
+.resources {
+  text-align: center;
+  opacity: 0.65;
+  font-size: 14px;
+
+  a {
+    color: var(--text-color);
+    transition: opacity 0.2s ease-in-out;
+
+    &:hover {
+      opacity: 1;
+    }
+  }
 }
